--- a/src/app/components/task/task.component.scss
+++ b/src/app/components/task/task.component.scss
@@ -2,9 +2,9 @@
   width: 500px;
   max-width: 100%;
   border: solid 1px #ccc;
-  min-height: 60px;
+  min-height: 370px;
   display: block;
-  background: white;
+  background: rgba(250, 250, 250, .5);
   border-radius: 4px;
   overflow: hidden;
 }
@@ -18,10 +18,12 @@
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
-  cursor: move;
-  background: white;
+  cursor: pointer;
+  background: linear-gradient(to right, #ee9ca7, #ffdde1);
   font-size: 14px;
 }
 
-input {
+
+.input-btn {
+  display: flex;
 }
