--- a/src/app/components/task/task.component.scss
+++ b/src/app/components/task/task.component.scss
@@ -10,7 +10,7 @@
 }
 
 .example-box {
-  //padding: 20px 10px;
+  padding: 5px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
   //display: flex;
@@ -23,7 +23,13 @@
   font-size: 14px;
 }
 
+.example-box-title {
+  font-weight: bold;
+  text-transform: uppercase;
+}
 
-.input-btn {
-  display: flex;
+.example-box-text {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
