--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,5 @@
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
 body {
   background: #E0EAFC;
   background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);
