--- a/src/app/components/refactor-window/refactor-window.component.html
+++ b/src/app/components/refactor-window/refactor-window.component.html
@@ -1,11 +1,11 @@
 <h2 mat-dialog-title>Refactor elements</h2>
 <mat-dialog-content>
-  <input type="text" placeholder="title">
-  <input type="text" placeholder="text">
+  <input type="text" placeholder="title" class="form-control mb-2">
+  <input type="text" placeholder="text" class="form-control mb-2">
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-dialog-close (click)="onNoClick()">Cancel</button>
-  <button >Save</button>
+  <button mat-dialog-close (click)="onNoClick()" class="btn btn-outline-danger m-lg-2">Cancel</button>
+  <button class="btn btn-outline-primary" (click)="refactorTodo()">Save</button>
 
 </mat-dialog-actions>
 
