--- a/src/app/components/refactor-window/refactor-window.component.html
+++ b/src/app/components/refactor-window/refactor-window.component.html
@@ -1,14 +1,21 @@
 <h2 mat-dialog-title>Refactor elements</h2>
 <mat-dialog-content>
   <form [formGroup]="refactorForm">
+    <div>
+      <div *ngIf="title?.errors?.required">
+        <small>Title required</small>
+      </div>
+      <input type="text" placeholder="title" class="form-control mb-2" formControlName="title">
+    </div>
 
-    <input type="text" placeholder="title" class="form-control mb-2" formControlName="title">
-    <div *ngIf="title?.errors?.required">Title required</div>
-
-    <input type="text" placeholder="text" class="form-control mb-2" formControlName="text">
-    <div *ngIf="text?.errors?.required">Text required</div>
-
+    <div>
+      <div *ngIf="text?.errors?.required">
+        <small>Text required</small>
+      </div>
+      <input type="text" placeholder="text" class="form-control mb-2" formControlName="text">
+    </div>
   </form>
+
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-dialog-close (click)="onNoClick()" class="btn btn-outline-danger m-lg-2">Cancel</button>
