refactor: add EventEmitter in refactor-window.component

--- a/src/app/components/refactor-window/refactor-window.component.html
+++ b/src/app/components/refactor-window/refactor-window.component.html
@@ -2,23 +2,20 @@
 <mat-dialog-content>
   <form [formGroup]="refactorForm">
     <div>
-      <div *ngIf="title?.errors?.required">
+      <div *ngIf="title.errors?.required">
         <small>Title required</small>
       </div>
       <input type="text" placeholder="title" class="form-control mb-2" formControlName="title">
     </div>
 
     <div>
-      <div *ngIf="text?.errors?.required">
+      <div *ngIf="text.errors?.required">
         <small>Text required</small>
       </div>
       <input type="text" placeholder="text" class="form-control mb-2" formControlName="text">
     </div>
+    <button mat-dialog-close (click)="onNoClick()" class="btn btn-outline-danger m-lg-2">Cancel</button>
+    <button class="btn btn-outline-primary" (click)="refactorTodo()">Save</button>
   </form>
-
 </mat-dialog-content>
-<mat-dialog-actions>
-  <button mat-dialog-close (click)="onNoClick()" class="btn btn-outline-danger m-lg-2">Cancel</button>
-  <button class="btn btn-outline-primary" (click)="refactorTodo()">Save</button>
-</mat-dialog-actions>
 
