--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -49,7 +49,7 @@
           <p class="example-box-text">{{ item.text}}</p>
           <button type="button" class="btn btn-outline-danger" (click)="deleteTodo(item.id)"><i class="bi bi-trash"></i>
           </button>
-          <button type="button" class="btn btn-outline-primary" (click)="openDialog(item)"><i class="bi bi-pencil"></i></button>
+          <button type="button" class="btn btn-outline-primary" (click)="editTodo(item)"><i class="bi bi-pencil"></i></button>
         </div>
       </div>
     </div>
@@ -65,7 +65,7 @@
           <p class="example-box-title">{{item.title}}</p>
           <p class="example-box-text">{{ item.text}}</p>
           <button type="button" class="btn btn-outline-danger" (click)="deleteTodo(item.id)"><i class="bi bi-trash"></i></button>
-          <button type="button" class="btn btn-outline-primary" (click)="openDialog(item)"><i class="bi bi-pencil"></i></button>
+          <button type="button" class="btn btn-outline-primary" (click)="editTodo(item)"><i class="bi bi-pencil"></i></button>
         </div>
       </div>
     </div>
@@ -81,7 +81,7 @@
           <p class="example-box-title">{{item.title}}</p>
           <p class="example-box-text">{{ item.text}}</p>
           <button type="button" class="btn btn-outline-danger" (click)="deleteTodo(item.id)"><i class="bi bi-trash"></i></button>
-          <button type="button" class="btn btn-outline-primary" (click)="openDialog(item)"><i class="bi bi-pencil"></i></button>
+          <button type="button" class="btn btn-outline-primary" (click)="editTodo(item)"><i class="bi bi-pencil"></i></button>
         </div>
       </div>
     </div>
