--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -37,54 +37,14 @@
 
   <div class="row">
 
-    <div class="col-lg-4">
-      <h4>To-do</h4>
-      <div cdkDropList class="example-list"
-           id="list-todo"
-           [cdkDropListData]="todos"
-           [cdkDropListConnectedTo]="['list-progress', 'list-completed']"
-           (cdkDropListDropped)="drop($event)">
-        <div class="example-box" *ngFor="let item of todos | filter:searchInput" [cdkDragData]="item" cdkDrag>
-          <p class="example-box-title">{{item.title}}</p>
-          <p class="example-box-text">{{ item.subtitle}}</p>
-          <button type="button" class="btn btn-outline-danger" (click)="deleteTodo(item.id)"><i class="bi bi-trash"></i>
-          </button>
-          <button type="button" class="btn btn-outline-primary" (click)="openDialog(item)"><i class="bi bi-pencil"></i></button>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-4">
-      <h4>In progress</h4>
-      <div cdkDropList class="example-list"
-           id="list-progress"
-           [cdkDropListData]="progress"
-           [cdkDropListConnectedTo]="['list-todo', 'list-completed']"
-           (cdkDropListDropped)="drop($event)">
-        <div class="example-box" *ngFor="let item of progress | filter:searchInput" [cdkDragData]="item" cdkDrag>
-          <p class="example-box-title">{{item.title}}</p>
-          <p class="example-box-text">{{ item.subtitle}}</p>
-          <button type="button" class="btn btn-outline-danger" (click)="deleteTodo(item.id)"><i class="bi bi-trash"></i></button>
-          <button type="button" class="btn btn-outline-primary"><i class="bi bi-pencil"></i></button>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-4">
-      <h4>Completed</h4>
-      <div cdkDropList class="example-list"
-           id="list-completed"
-           [cdkDropListData]="completed"
-           [cdkDropListConnectedTo]="['list-progress', 'list-todo']"
-           (cdkDropListDropped)="drop($event)">
-        <div class="example-box" *ngFor="let item of completed | filter:searchInput" [cdkDragData]="item" cdkDrag>
-          <p class="example-box-title">{{item.title}}</p>
-          <p class="example-box-text">{{ item.subtitle}}</p>
-          <button type="button" class="btn btn-outline-danger" (click)="deleteTodo(item.id)"><i class="bi bi-trash"></i></button>
-          <button type="button" class="btn btn-outline-primary"><i class="bi bi-pencil"></i></button>
-        </div>
-      </div>
-    </div>
+    <app-list class="col-lg-4" *ngFor="let l of lists"
+              [list]="l"
+              [searchInput]="searchInput"
+              (onDrop)="drop($event)"
+              (onDeleteTodo)="deleteTodo($event)"
+              (onOpenDialog)="openDialog($event)"
+    >
+    </app-list>
 
   </div>
 
